logs/validate.20260408-062730.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: expected delimiter
   --> src/Chap47/QuadProbFlatHashTableStEph.rs:854:46
    |
854 | ...                   implies !#[trigger] table.table@[j].spec_entry_to_map().dom().contains(*key) by {
    |                                ^

error[E0425]: cannot find type `QuadProbFlatHashTableStEph` in this scope
    --> src/Chap47/QuadProbFlatHashTableStEph.rs:1288:30
     |
1288 |     impl std::fmt::Debug for QuadProbFlatHashTableStEph {
     |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `QuadProbFlatHashTableStEph` in this scope
    --> src/Chap47/QuadProbFlatHashTableStEph.rs:1294:32
     |
1294 |     impl std::fmt::Display for QuadProbFlatHashTableStEph {
     |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 2129MB, peak z3 RSS: 224MB, min free: 24113MB
Sampled CPU Usage: rust_verify: 26s, z3 children: 4s
